--- a/index.html
+++ b/index.html
@@ -1,125 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Jordan Dunn | Portfolio</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title> Jordan Dunn | Portfolio </title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-</head>
-
-<body>
+  <body>
     <header class="homepage-hero">
-        <div class="content-wrapper">
-            <h1> Jordan Dunn </h1>
+      <div class="content-wrapper">
+        <div id="particles-js">
+          <script type="text/javascript" src="particles.js"> </script>
+        <script type="text/javascript" src="/js/app.js"> </script>  
+        </div>
+        
+        <h1>Jordan Dunn</h1>
 
-            <nav>
-                <ul>
-                    <li><a href="#">home</a></li>
-                    <li> <a href=#about>about</a> </li>
-                    <li> <a href=#skills>skills</a> </li>
-                    <li> <a href=#contact>contact</a> </li>
-                    <li><a href="projects/index.html">projects</a></li>
-                </ul>
-            </nav>
-
-            <h2> Full Stack Developer </h2>
-            <h3> Hi I'm Jordan, a full stack developer based out of Santa Clarita, California. </h3>
-
+        <div class="input">
+          <button class="value">
+            <svg
+              viewBox="0 0 16 16"
+              xmlns="http://www.w3.org/2000/svg"
+              data-name="Layer 2"
+            ></svg>
+            <p>Home</p>
+            <svg
+              viewBox="0 0 16 16"
+              xmlns="http://www.w3.org/2000/svg"
+              data-name="Layer 2"
+            ></svg>
+          </button>
+          <button class="value">
+            <svg
+              id="Line"
+              viewBox="0 0 32 32"
+              xmlns="http://www.w3.org/2000/svg"
+            ></svg>
+            <p>About Me</p>
+            <svg
+              viewBox="0 0 16 16"
+              xmlns="http://www.w3.org/2000/svg"
+              data-name="Layer 2"
+            ></svg>
+          </button>
+          <button class="value">
+            <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg"></svg>
+            <p>Skills</p>
+            <svg
+              viewBox="0 0 16 16"
+              xmlns="http://www.w3.org/2000/svg"
+              data-name="Layer 2"
+            ></svg>
+          </button>
+          <button class="value">
+            <svg
+              id="svg8"
+              viewBox="0 0 32 32"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="layer1" transform="translate(-33.022 -30.617)"></g>
+            </svg>
+            <p>Projects</p>
+            <svg
+              viewBox="0 0 16 16"
+              xmlns="http://www.w3.org/2000/svg"
+              data-name="Layer 2"
+            ></svg>
+          </button>
+          <button class="value">
+            <svg
+              fill="none"
+              viewBox="0 0 24 25"
+              xmlns="http://www.w3.org/2000/svg"
+            ></svg>
+            <p>Contact</p>
+            <svg
+              viewBox="0 0 16 16"
+              xmlns="http://www.w3.org/2000/svg"
+              data-name="Layer 2"
+            ></svg>
+          </button>
         </div>
 
+        <div>
+          <h2><span class="typed-fade-out"></span></h2>
+
+          <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+          <script>
+            var typed = new Typed(".typed-fade-out", {
+              strings: ["Full Stack <span>Developer    </span>"],
+              typeSpeed: 15,
+              loop: false,
+              showCursor: true,
+              cursorChar: "|",
+            });
+          </script>
+        </div>
+
+        <h3>
+          Hi I'm Jordan, a full stack developer based out of Santa Clarita,
+          California.
+        </h3>
+      </div>
     </header>
 
     <main>
-        <section id="about">
-            <div class="content-wrapper">
-                <h2> About me</h2>
+      <section id="about">
+        <div class="content-wrapper">
+          <h2>About me</h2>
 
-                <p> My tech journey started with a degree in journalism. I loved researching,
-                    writing, and sharing my voice online, but something felt missing. I wished
-                    for a way to share and display information exactly the way I wanted. That's
-                    when I discovered and fell in love with coding and web design! </p>
+          <p>
+            My tech journey started with a degree in journalism. I loved
+            researching, writing, and sharing my voice online, but something
+            felt missing. I wished for a way to share and display information
+            exactly the way I wanted. That's when I discovered and fell in love
+            with coding and web design!
+          </p>
 
-                <p> As a front end developer, I pride myself on writing code that's easy to read
-                    and build upon while still looking great. My goal with every site is to provide
-                    a top-of-the-line user experience. Besides web development, I enjoy
-                    gardening and spending time with my small (but growing!) family. </p>
+          <p>
+            As a front end developer, I pride myself on writing code that's easy
+            to read and build upon while still looking great. My goal with every
+            site is to provide a top-of-the-line user experience. Besides web
+            development, I enjoy gardening and spending time with my small (but
+            growing!) family.
+          </p>
+        </div>
+      </section>
 
-            </div>
-        </section>
+      <section id="skills">
+        <div class="content-wrapper">
+          <h2>Skills</h2>
 
-        <section id="skills">
-            <div class="content-wrapper">
-                <h2> Skills </h2>
-
-                <div class="skill-list"> 
-
-                    <h3> HTML </h3>
-
-                </div>
-
-                <div class="skill-list"> 
-
-                    <h3> CSS </h3>
-
-                </div>
-
-                <div class="skill-list"> 
-
-                    <h3> Git & GitHub </h3>
-
-                </div>
-
-                <div class="skill-list"> 
-
-                  <h3> React.js </h3>
-
-              </div>
-
-              <div class="skill-list"> 
-
-                <h3> Javascript </h3>
-
-            </div>
-
-            <div class="skill-list"> 
-
-              <h3> Python </h3>
-
+          <div class="skill-list">
+            <h3>HTML</h3>
           </div>
 
-            </div>
-        </section>
+          <div class="skill-list">
+            <h3>CSS</h3>
+          </div>
 
+          <div class="skill-list">
+            <h3>Git & GitHub</h3>
+          </div>
+
+          <div class="skill-list">
+            <h3>React.js</h3>
+          </div>
+
+          <div class="skill-list">
+            <h3>Javascript</h3>
+          </div>
+
+          <div class="skill-list">
+            <h3>Python</h3>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer id="contact">
-        <div class="content-wrapper">
-            <div class="contact-image">
-                <img src="img/jess-bailey-q10VITrVYUM-unsplash.png" alt="Desk with glasses, keyboard, pens and notepad">
-            </div>
-
-            <div class="contact-info"> 
-                <h2> Contact Me </h2>
-
-                <h3 id="email-header"> Let's meet for a cup of coffee. </h3>
-
-                <a href=mailto:JordanDunnDeveloping@gmail.com> <img id="envelope-icon" src="img/envelope.png" alt="Envelope icon"> JordanDunnDeveloping@gmail.com  </a>
-
-                <h3 id="email-bottom"> Or, follow me on social media: </h3>
-
-                <ul>
-                    <li> <a href="https://www.linkedin.com/feed/" target="_blank"> <img src="img/linkedin.png" alt="LinkedIns logo"> </a> </li>
-                    <li> <a href="https://github.com/" target="_blank"> <img src="img/github.png" alt="GitHubs logo"> </a> </li>
-                </ul>
-            </div>
-
+      <div class="content-wrapper">
+        <div class="contact-image">
+          <img
+            src="img/jess-bailey-q10VITrVYUM-unsplash.png"
+            alt="Desk with glasses, keyboard, pens and notepad"
+          />
         </div>
+
+        <div class="contact-info">
+          <h2>Contact Me</h2>
+
+          <h3 id="email-header">Let's meet for a cup of coffee.</h3>
+
+          <a href="mailto:JordanDunnDeveloping@gmail.com">
+            <img
+              id="envelope-icon"
+              src="img/envelope.png"
+              alt="Envelope icon"
+            />
+            JordanDunnDeveloping@gmail.com
+          </a>
+
+          <h3 id="email-bottom">Or, follow me on social media:</h3>
+
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/feed/" target="_blank">
+                <img src="img/linkedin.png" alt="LinkedIns logo" />
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/" target="_blank">
+                <img src="img/github.png" alt="GitHubs logo" />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
