--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <script src="js/app.js"></script>
+    <script src="particles.js"></script>
   </head>
 
   <body>
@@ -21,9 +26,11 @@
         <script type="text/javascript" src="/js/app.js"> </script>  
         </div>
         
-        <h1>Jordan Dunn</h1>
 
         <div class="input">
+          <h1 class="initial"> JD </h1>
+          <h1 class="full-name"> Jordan Dunn </h1>
+
           <button class="value">
             <svg
               viewBox="0 0 16 16"
@@ -96,7 +103,7 @@
 
           <script>
             var typed = new Typed(".typed-fade-out", {
-              strings: ["Full Stack <span>Developer    </span>"],
+              strings: ["Full Stack <span>Developer </span>"],
               typeSpeed: 20,
               loop: false,
               showCursor: true,
@@ -109,6 +116,22 @@
           Hi I'm Jordan, a full stack developer based out of Santa Clarita,
           California.
         </h3>
+
+        <div class="button-wrapper">
+          <h3> View my work <svg
+            width="100px"
+            height="100px"
+            viewBox="0 0 36 25"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M11.0001 3.67157L13.0001 3.67157L13.0001 16.4999L16.2426 13.2574L17.6568 14.6716L12 20.3284L6.34314 14.6716L7.75735 13.2574L11.0001 16.5001L11.0001 3.67157Z"
+              fill="currentColor"
+            />
+          </svg>
+        </h3>
+        </div>
       </div>
     </header>
 
