--- a/index.html
+++ b/index.html
@@ -138,23 +138,20 @@
     <main>
       <section id="about">
         <div class="content-wrapper">
-          <h2>About me</h2>
+          
+          <h2 class="about-me">About me</h2>
+          <div>
+              <p class="about-desc">
+              Hello there! My name is Jordan Dunn. My professional goal is becoming a full stack developer.
+              As a kid I have always been intrigued with computers and learning how they work. Through researching
+              different career paths in computer science, my eyes were opened to the world of web development.
+              I enjoy web development because it is challenging while also allowing me to top into my creative side.
+            </p>
+            <h2 class="fun-fact"> Fun Fact </h2>
 
-          <p>
-            My tech journey started with a degree in journalism. I loved
-            researching, writing, and sharing my voice online, but something
-            felt missing. I wished for a way to share and display information
-            exactly the way I wanted. That's when I discovered and fell in love
-            with coding and web design!
-          </p>
-
-          <p>
-            As a front end developer, I pride myself on writing code that's easy
-            to read and build upon while still looking great. My goal with every
-            site is to provide a top-of-the-line user experience. Besides web
-            development, I enjoy gardening and spending time with my small (but
-            growing!) family.
-          </p>
+            <p class="fun-fact-desc"> While in middle school, I learned aspects of graphic design. Through that I was able to design
+            social media banners for clients. These skills also helped me with designing this website. </p>
+          </div>          
         </div>
       </section>
 
