--- a/index.html
+++ b/index.html
@@ -165,40 +165,42 @@
 
       <section id="skills" class="animate">
         <div class="content-wrapper skills">
-          <div class="skill-row1">
-            <div class="skill-list">
+          <div class="skill-rows">
+            <div class="skill-row1">
+            <div class="skill-list one">
               <img src="./img/html.6aa56206be02cf6404844871df1d2da6.png">
-              <h2>HTML</h2>
+              <h3>HTML</h3>
             </div>
             
-            <div class="skill-list">
+            <div class="skill-list two">
               <img src="./img/css.0ce0f0a2b4c4aa34b64c40e5278af3d1.png">
-              <h2>CSS</h2>
+              <h3>CSS</h3>
             </div>
           </div>
 
           <div class="skill-row2">
-            <div class="skill-list">
+            <div class="skill-list three">
               <img src="./img/git.3092b5991e8accb9e7c36817c048a8d5.png">
-              <h2>Git & GitHub</h2>
+              <h3>Git</h3>
             </div>
             
-            <div class="skill-list">
+            <div class="skill-list four">
               <img src="./img/react.cb15bfce2a9004ce61c5f79f805b067b.png">
-              <h2>React.js</h2>
+              <h3>React.js</h3>
             </div>
           </div>
 
           <div class="skill-row3">
-            <div class="skill-list">
-              <img src="./img/js.f8a28e905c78dadb79434b7ceebd52a0.png">
-              <h2>Javascript</h>
+            <div class="skill-list five">
+              <img class="js-img" src="./img/js.f8a28e905c78dadb79434b7ceebd52a0.png">
+              <h3>Javascript</h3>
             </div>
 
-            <div class="skill-list">
+            <div class="skill-list six">
               <img src="./img/icons8-python-153.png">
-              <h2>Python</h2>
+              <h3>Python</h3>
             </div>
+          </div>
           </div>
         </div>
       </section>
