--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <script src="js/app.js"></script>
   <script src="js/scripts.js"></script>
+  <script src="js/lib/gradients.js"></script>
+
 </head>
 
 <body>
@@ -84,6 +86,14 @@
           </svg>
         </a>
       </div>
+      <div class="social-icons">
+        <a target="_blank" href="https://github.com/Jodunn1">
+          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 16 16"><path fill="#fff" d="M8 0c4.42 0 8 3.58 8 8a8.01 8.01 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38c0-.27.01-1.13.01-2.2c0-.75-.25-1.23-.54-1.48c1.78-.2 3.65-.88 3.65-3.95c0-.88-.31-1.59-.82-2.15c.08-.2.36-1.02-.08-2.12c0 0-.67-.22-2.2.82c-.64-.18-1.32-.27-2-.27s-1.36.09-2 .27c-1.53-1.03-2.2-.82-2.2-.82c-.44 1.1-.16 1.92-.08 2.12c-.51.56-.82 1.28-.82 2.15c0 3.06 1.86 3.75 3.64 3.95c-.23.2-.44.55-.51 1.07c-.46.21-1.61.55-2.33-.66c-.15-.24-.6-.83-1.23-.82c-.67.01-.27.38.01.53c.34.19.73.9.82 1.13c.16.45.68 1.31 2.69.94c0 .67.01 1.3.01 1.49c0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8"/></svg>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/jordan-dunn-bb5754283/">
+          <img src="/img/—Pngtree—linkedin white icon_3570423.png">
+        </a>
+      </div>
     </div>
   </header>
 
@@ -118,42 +128,43 @@
         <div class="content-wrapper skills2">
           <div class="skill-rows">
             <div class="skill-row1">
-              <div class="skill-list one">
+              <div class="skill-list one pop">
                 <img src="./img/html.6aa56206be02cf6404844871df1d2da6.png">
                 <h3>HTML</h3>
               </div>
 
-              <div class="skill-list two">
+              <div class="skill-list two pop2">
                 <img src="./img/css.0ce0f0a2b4c4aa34b64c40e5278af3d1.png">
                 <h3>CSS</h3>
               </div>
             </div>
 
             <div class="skill-row2">
-              <div class="skill-list three">
+              <div class="skill-list three pop3">
                 <img src="./img/git.3092b5991e8accb9e7c36817c048a8d5.png">
                 <h3>Git</h3>
               </div>
 
-              <div class="skill-list four">
+              <div class="skill-list four pop4">
                 <img src="./img/react.cb15bfce2a9004ce61c5f79f805b067b.png">
                 <h3>React.js</h3>
               </div>
             </div>
 
             <div class="skill-row3">
-              <div class="skill-list five">
+              <div class="skill-list five pop5">
                 <img class="js-img" src="./img/js.f8a28e905c78dadb79434b7ceebd52a0.png">
                 <h3>Javascript</h3>
               </div>
 
-              <div class="skill-list six">
+              <div class="skill-list six pop6">
                 <img class="aboutme3" src="./img/icons8-python-153.png">
                 <h3>Python</h3>
               </div>
             </div>
           </div>
         </div>
+        <svg class="skill-appear"></svg>
       </div>
     </section>
 
@@ -165,12 +176,13 @@
         </div>
         <div class="projects-lists">
           <div class="unplugged">
-            <div class="img-background">
+            <svg class="blurredanimate1"></svg>
+            <div class="img-background blurred1">
               <div class="unplugged-img-container">
                 <img src="/img/unplugged.PNG">
               </div>
             </div>
-            <div class="unplugged-text">
+            <div class="unplugged-text blurred2">
               <h3> Unplugged </h3>
               <h4> A multi-page responsive website that adapts to mobile, tablet, and desktop screens. This site allows companies to schedule a retreat away from the workplace for their employees.
               </h4>
@@ -183,12 +195,13 @@
             </div>
           </div>
           <div class="recipe-app">
-            <div class="img-background">
+            <svg class="blurredanimate2"></svg>
+            <div class="img-background blurred3">
               <div class="recipe-app-img-container">
                 <img src="/img/recipe-app.PNG">
               </div>
             </div>
-            <div class="recipe-app-text">
+            <div class="recipe-app-text blurred4">
               <h3> Recipe App </h3>
               <h4> An application coded through react and python in which the user is able to add their own recipes, view their added recipes, delete recipes, and save multiple recipes to a database. 
               <br/>
@@ -203,13 +216,14 @@
             </div>
           </div>
           <div class="sticky-note">
-            <div class="img-background">
+            <svg class="blurredanimate3"></svg>
+            <div class="img-background blurred5">
               <div class="sticky-note-img-container">
                 <img src="/img/sticky-note.PNG">
               </div>
             </div>
-            <div class="sticky-note-text">
-              <h3 > Sticky Notes UI </h3>
+            <div class="sticky-note-text blurred6">
+              <h3> Sticky Notes UI </h3>
               <h4> An interactive React app that lets users create “sticky notes” plus edit, delete, and search their to-do list items.
                 <br/>
                 <br/>
@@ -224,12 +238,13 @@
             </div>
           </div>
           <div class="rogue-pickings">
-            <div class="img-background">
+            <svg class="blurredanimate4"></svg>
+            <div class="img-background blurred7">
               <div class="rogue-pickings-img-container">
                 <img src="/img/rogue-pickings.PNG">
               </div>
             </div>
-            <div class="rogue-pickings-text">
+            <div class="rogue-pickings-text blurred8">
               <h3 class="projects3"> Rogue Pickings </h3>
               <h4> A simple home page perfect for a pop-up restaurant or food truck. Originally a static website, I converted it into a responsive design using Flexbox.
                 <br/>
@@ -244,12 +259,13 @@
             </div>
           </div>
           <div class="guess-the-word">
-            <div class="img-background">
+            <svg class="blurredanimate5"></svg>
+            <div class="img-background blurred9">
               <div class="guess-the-word-img-container">
                 <img src="/img/guess-the-word.PNG">
               </div>
             </div>
-            <div class="guess-the-word-text">
+            <div class="guess-the-word-text blurred10">
               <h3> Guess The Word Game </h3>
               <h4> An interactive JavaScript game where players guess one letter at a time. Guess all the letters correctly in eight attempts, you win!
               <br/>
