--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jordan Dunn | Portfolio</title>
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/normalize.css" />
@@ -63,7 +64,7 @@
         <script>
           var typed = new Typed(".typed-fade-out", {
             strings: ["Full Stack <span>Developer</span>"],
-            typeSpeed: 50,
+            typeSpeed: 0,
             loop: true,
             showCursor: true,
             cursorChar: "|",
@@ -175,8 +176,8 @@
           <h2> Projects </h2>
         </div>
         <div class="projects-lists">
+          <svg class="blurredanimate1"></svg>
           <div class="unplugged">
-            <svg class="blurredanimate1"></svg>
             <div class="img-background blurred1">
               <div class="unplugged-img-container">
                 <img src="/img/unplugged.PNG">
