--- a/index.html
+++ b/index.html
@@ -28,41 +28,15 @@
         <script type="text/javascript" src="/js/app.js"></script>
       </div>
 
-      <div class="input">
-        <button class="value">
-          <svg id="Line" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
-          <a href="#"><span class="home-blue">Home</span></a>
-          <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
-        </button>
-        <button class="value">
-          <svg id="Line" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
-          <a href="#about"><span class="about-blue"><span class="about-blue2">About Me</span></span></a>
-          <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
-        </button>
-        <button class="value">
-          <svg id="svg8" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-            <g id="layer1" transform="translate(-33.022 -30.617)"></g>
-          </svg>
-          <a href="#projects"><span class="projects-blue"><span class="projects-blue2">Projects</span></span></a>
-          <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
-        </button>
-        <button class="value">
-          <svg fill="none" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg"></svg>
-          <a href="#contact"><span class="contact-blue">Contact</span></a>
-          <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
-        </button>
-      </div>
-
-
       <div>
-        <h2><span class="typed-fade-out home"></span></h2>
+        <h2 id="home"><span class="typed-fade-out home"></span></h2>
 
         <script src="/js/typed.js"></script>
 
         <script>
           var typed = new Typed(".typed-fade-out", {
             strings: ["Full Stack <span>Developer</span>"],
-            typeSpeed: 30,
+            typeSpeed: 45,
             loop: true,
             showCursor: true,
             cursorChar: "|",
@@ -98,9 +72,33 @@
         <a target="_blank" href="https://www.linkedin.com/in/jordan-dunn-bb5754283/">
           <img src="/img/—Pngtree—linkedin white icon_3570423.png">
         </a>
-      </div>
+      </div>  
     </div>
   </header>
+    <div class="input">
+    <button class="value">
+      <svg id="Line" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
+      <a href="#home"><span class="home-blue">Home</span></a>
+      <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
+    </button>
+    <button class="value">
+      <svg id="Line" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
+      <a href="#about"><span class="about-blue"><span class="about-blue2">About Me</span></span></a>
+      <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
+    </button>
+    <button class="value">
+      <svg id="svg8" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+        <g id="layer1" transform="translate(-33.022 -30.617)"></g>
+      </svg>
+      <a href="#projects"><span class="projects-blue"><span class="projects-blue2">Projects</span></span></a>
+      <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
+    </button>
+    <button class="value">
+      <svg fill="none" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg"></svg>
+      <a href="#contact"><span class="contact-blue">Contact</span></a>
+      <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
+    </button>
+  </div>
 
   <main>
     <section id="about" class="about">
@@ -224,7 +222,7 @@
             </div>
             </div>
           </div>
-                      <svg class="blurredanimate3"></svg>
+          <svg class="blurredanimate3"></svg>
           <div class="sticky-note">
             <div class="img-background blurred5">
               <div class="sticky-note-img-container">
@@ -248,8 +246,8 @@
               </div>
             </div>
           </div>
+          <svg class="blurredanimate4"></svg>
           <div class="rogue-pickings">
-            <svg class="blurredanimate4"></svg>
             <div class="img-background blurred7">
               <div class="rogue-pickings-img-container">
                 <img src="/img/rogue-pickings.PNG">
@@ -271,8 +269,8 @@
             </div>
             </div>
           </div>
+          <svg class="blurredanimate5"></svg>
           <div class="guess-the-word">
-            <svg class="blurredanimate5"></svg>
             <div class="img-background blurred9">
               <div class="guess-the-word-img-container">
                 <img src="/img/guess-the-word.PNG">
