Added about and fun fact animation

--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@
   </div>
 
   <main>
+    <svg class="slide-in1"></svg>
+    <svg class="slide-in2"></svg>
     <section id="about" class="about">
       <div class="content-wrapper">
         <h2 class="about-me">About me</h2>
         <div class="desc-container">
           <div class="about-desc-container">
-            <h4 class="about-desc">
+            <h4 class="about-desc slided1">
             Hello there! My name is Jordan Dunn. My professional goal is
             becoming a full stack developer. As a kid I have always been
             intrigued with computers and learning how they work. Through
@@ -119,7 +121,7 @@
           
           <h2 class="fun-fact">Fun Fact</h2>
           <div class="fun-fact-desc-container">
-            <h4 class="fun-fact-desc aboutme2">
+            <h4 class="fun-fact-desc aboutme2 slided2">
             While in middle school, I learned aspects of graphic design.
             Through that I was able to design social media banners for
             clients. These skills also helped me with designing this website.
