Finalized laptop query

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
               </div>
             </div>
             <div class="recipe-app-text blurred4">
+            <img class="recipe-app-text" src="/img/recipe-app.PNG">
               <div class="text-container">
               <h3> Recipe App </h3>
               <h4> An application coded through react and python in which the user is able to add their own recipes, view their added recipes, delete recipes, and save multiple recipes to a database. 
@@ -233,6 +234,7 @@
               </div>
             </div>
             <div class="sticky-note-text blurred6">
+              <img class="sticky-note-text" src="/img/sticky-note1.PNG">
               <div class="text-container">
               <h3> Sticky Notes UI </h3>
               <h4> An interactive React app that lets users create “sticky notes” plus edit, delete, and search their to-do list items.
@@ -257,6 +259,7 @@
               </div>
             </div>
             <div class="rogue-pickings-text blurred8">
+              <img class="rogue-pickings-text" src="/img/rogue-pickings.PNG">
               <div class="text-container">
               <h3 class="projects3"> Rogue Pickings </h3>
               <h4> A simple home page perfect for a pop-up restaurant or food truck. Originally a static website, I converted it into a responsive design using Flexbox.
@@ -280,6 +283,7 @@
               </div>
             </div>
             <div class="guess-the-word-text blurred10">
+              <img class="guess-the-word-text" src="/img/guess-the-word.PNG">
               <div class="text-container">
               <h3> Guess The Word Game </h3>
               <h4> An interactive JavaScript game where players guess one letter at a time. Guess all the letters correctly in eight attempts, you win!
