Finalized laptop and desktop queries

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               </div>
             </div>
             <div class="unplugged-text blurred2">
-              <img class="unplugged-text" src="/img/unplugged.PNG">
+              <img class="unplugged-text" src="/img/unplugged-transformed.png">
               <div class="text-container">
                 <h3> Unplugged </h3>
                 <h4> A multi-page responsive website that adapts to mobile, tablet, and desktop screens. This site allows companies to schedule a retreat away from the workplace for their employees.
@@ -302,92 +302,6 @@
         </div>
       </div>
     </section>
-
-    <div class="projects-laptop">
-      <div class="content-wrapper">
-        <div class="project-text">
-          <img class="project-text" src="/img/unplugged.PNG">
-          <div class="text-container1">
-            <h3> Unplugged </h3>
-            <h4> A multi-page responsive website that adapts to mobile, tablet, and desktop screens. This site allows companies to schedule a retreat away from the workplace for their employees.
-            </h4>
-            <div class="project-link1">
-            <a href="https://jodunn1.github.io/html5-boilerplate/" target="_blank"> LIVE APP </a>
-            </div>
-            <div class="project-link2">
-            <a href="https://github.com/Jodunn1/html5-boilerplate/tree/main" target="_blank"> LEARN MORE </a>
-            </div>
-            </div>
-            </div>
-        <div class="project-text">
-            <img class="project-text" src="/img/recipe-app.PNG">
-            <div class="text-container2">
-              <h3> Recipe App </h3>
-              <h4 class="recipe-h4"> An application coded through react and python in which the user is able to add their own recipes, view their added recipes, delete recipes, and save multiple recipes to a database. 
-              <br/>
-              <br/>
-              </h4>
-              <div class="project-link1">
-                <a href="https://recipe-card-app.netlify.app/" target="_blank"> LIVE APP </a>
-              </div>
-              <div class="project-link2">
-                <a class="projects2" href="https://github.com/Jodunn1/Recipe-app" target="_blank"> LEARN MORE </a>
-              </div>
-            </div>
-            </div>
-        <div class="project-text">
-            <img class="project-text" src="/img/sticky-notelaptop5.PNG">
-            <div class="text-container3">
-              <h3> Sticky Notes UI </h3>
-              <h4 class="sticky-h4"> An interactive React app that lets users create “sticky notes” plus edit, delete, and search their to-do list items.
-                <br/>
-                <br/>
-                <br/>
-              </h4>
-              <div class="project-link1">
-                <a href="https://jv6drh.csb.app/" target="_blank"> LIVE APP </a>
-              </div>
-              <div class="project-link2">
-                <a href="https://codesandbox.io/p/sandbox/sticky-note-app-jv6drh" target="_blank"> LEARN MORE </a>
-              </div>
-              </div>
-              </div>
-        <div class="project-text">
-              <img class="project-text" src="/img/rogue-pickings.PNG">
-              <div class="text-container4">
-                <h3> Rogue Pickings </h3>
-                <h4> A simple home page perfect for a pop-up restaurant or food truck. Originally a static website, I converted it into a responsive design using Flexbox.
-                  <br/>
-                  <br/>
-                </h4>
-                <div class="project-link1">
-                  <a href="https://jodunn1.github.io/Rogue-pickings-responsive/" target="_blank"> LIVE APP </a>
-                </div>
-                <div class="project-link2">
-                  <a href="https://github.com/Jodunn1/Rogue-pickings-responsive" target="_blank"> LEARN MORE </a>
-                </div>
-              </div>
-              </div>
-        <div class="project-text">
-              <img class="project-text" src="/img/guess-the-word.PNG">
-              <div class="text-container5">
-                <h3> Guess The Word Game </h3>
-                <h4> An interactive JavaScript game where players guess one letter at a time. Guess all the letters correctly in eight attempts, you win!
-                <br/>
-                <br/>
-                </h4>
-                <div class="project-link1">
-                  <a href="https://jodunn1.github.io/guesstheword/" target="_blank"> LIVE APP </a>
-                </div>
-                <div class="project-link2">
-                  <a href="https://github.com/Jodunn1/guesstheword" target="_blank"> LEARN MORE </a>
-                </div>
-              </div>
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
 </main>
 
 
