Finalized portfolio website

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                 <h4> A multi-page responsive website that adapts to mobile, tablet, and desktop screens. This site allows companies to schedule a retreat away from the workplace for their employees.
                 </h4>
                 <div class="project-link1">
-                <a href="https://jodunn1.github.io/html5-boilerplate/" target="_blank"> LIVE APP </a>
+                <a href="https://jodunn1.github.io/Unplugged/" target="_blank"> LIVE APP </a>
               </div>
               <div class="project-link2">
-                <a href="https://github.com/Jodunn1/html5-boilerplate/tree/main" target="_blank"> LEARN MORE </a>
+                <a href="https://github.com/Jodunn1/Unplugged/tree/main" target="_blank"> LEARN MORE </a>
               </div>
               </div>
             </div>
