Finalized portfolio website. Fixed project desc, order and picture size

--- a/index.html
+++ b/index.html
@@ -180,28 +180,6 @@
           <h2> Projects </h2>
         </div>
         <div class="projects-lists">
-          <svg class="blurredanimate1"></svg>
-          <div class="unplugged">
-            <div class="img-background blurred1">
-              <div class="unplugged-img-container">
-                <img src="/img/unplugged.PNG">
-              </div>
-            </div>
-            <div class="unplugged-text blurred2">
-              <img class="unplugged-text" src="/img/unplugged-transformed.png">
-              <div class="text-container">
-                <h3> Unplugged </h3>
-                <h4> A multi-page responsive website that adapts to mobile, tablet, and desktop screens. This site allows companies to schedule a retreat away from the workplace for their employees.
-                </h4>
-                <div class="project-link1">
-                <a href="https://jodunn1.github.io/Unplugged/" target="_blank"> LIVE APP </a>
-              </div>
-              <div class="project-link2">
-                <a href="https://github.com/Jodunn1/Unplugged/tree/main" target="_blank"> LEARN MORE </a>
-              </div>
-              </div>
-            </div>
-          </div>
           <svg class="blurredanimate2"></svg>
           <div class="recipe-app">
             <div class="img-background blurred3">
@@ -237,7 +215,7 @@
               <img class="sticky-note-text" src="/img/sticky-note1.PNG">
               <div class="text-container">
               <h3> Sticky Notes UI </h3>
-              <h4> An interactive React app that lets users create “sticky notes” plus edit, delete, and search their to-do list items.
+              <h4> An interactive Sticky Notes app built using React. It is a simple app that lets users create “sticky notes” plus edit, delete, and search their to-do list items.
                 <br/>
                 <br/>
                 <br/>
@@ -249,30 +227,6 @@
                 <a href="https://codesandbox.io/p/sandbox/sticky-note-app-jv6drh" target="_blank"> LEARN MORE </a>
               </div>
               </div>
-            </div>
-          </div>
-          <svg class="blurredanimate4"></svg>
-          <div class="rogue-pickings">
-            <div class="img-background blurred7">
-              <div class="rogue-pickings-img-container">
-                <img src="/img/rogue-pickings.PNG">
-              </div>
-            </div>
-            <div class="rogue-pickings-text blurred8">
-              <img class="rogue-pickings-text" src="/img/rogue-pickings.PNG">
-              <div class="text-container">
-              <h3 class="projects3"> Rogue Pickings </h3>
-              <h4> A simple home page perfect for a pop-up restaurant or food truck. Originally a static website, I converted it into a responsive design using Flexbox.
-                <br/>
-                <br/>
-              </h4>
-              <div class="project-link1">
-                <a href="https://jodunn1.github.io/Rogue-pickings-responsive/" target="_blank"> LIVE APP </a>
-              </div>
-              <div class="project-link2">
-                <a href="https://github.com/Jodunn1/Rogue-pickings-responsive" target="_blank"> LEARN MORE </a>
-              </div>
-            </div>
             </div>
           </div>
           <svg class="blurredanimate5"></svg>
@@ -295,6 +249,52 @@
               </div>
               <div class="project-link2">
                 <a href="https://github.com/Jodunn1/guesstheword" target="_blank"> LEARN MORE </a>
+              </div>
+            </div>
+            </div>
+          </div>
+          <svg class="blurredanimate1"></svg>
+          <div class="unplugged">
+            <div class="img-background blurred1">
+              <div class="unplugged-img-container">
+                <img src="/img/unplugged.PNG">
+              </div>
+            </div>
+            <div class="unplugged-text blurred2">
+              <img class="unplugged-text" src="/img/unplugged-transformed.png">
+              <div class="text-container">
+                <h3> Unplugged </h3>
+                <h4> A multi-page responsive website coded through HTML and CSS. This site allows companies to schedule a retreat away from the workplace for their employees.
+                </h4>
+                <div class="project-link1">
+                <a href="https://jodunn1.github.io/Unplugged/" target="_blank"> LIVE APP </a>
+              </div>
+              <div class="project-link2">
+                <a href="https://github.com/Jodunn1/Unplugged/tree/main" target="_blank"> LEARN MORE </a>
+              </div>
+              </div>
+            </div>
+          </div>
+          <svg class="blurredanimate4"></svg>
+          <div class="rogue-pickings">
+            <div class="img-background blurred7">
+              <div class="rogue-pickings-img-container">
+                <img src="/img/rogue-pickings.PNG">
+              </div>
+            </div>
+            <div class="rogue-pickings-text blurred8">
+              <img class="rogue-pickings-text" src="/img/rogue-pickings.PNG">
+              <div class="text-container">
+              <h3 class="projects3"> Rogue Pickings </h3>
+              <h4> A simple home page for a meal preperation service. This website was coded through HTML and CSS and is fully responsive using Flexbox.
+                <br/>
+                <br/>
+              </h4>
+              <div class="project-link1">
+                <a href="https://jodunn1.github.io/Rogue-pickings-responsive/" target="_blank"> LIVE APP </a>
+              </div>
+              <div class="project-link2">
+                <a href="https://github.com/Jodunn1/Rogue-pickings-responsive" target="_blank"> LEARN MORE </a>
               </div>
             </div>
             </div>
